[workspace]
resolver = "2"

members = [
    "mls-rs",
    "mls-rs-core",
    "mls-rs-identity-x509",
    "mls-rs/test_harness_integration",
    "mls-rs-crypto-impl",
    "mls-rs-crypto-hpke",
    "mls-rs-provider-sqlite",
    "mls-rs-codec",
    "mls-rs-codec-derive",
    "mls-rs-uniffi",
    "mls-rs-uniffi/uniffi-bindgen",
]

default-members = [
    "mls-rs",
    "mls-rs-core",
    "mls-rs-identity-x509",
    "mls-rs-crypto-hpke",
    "mls-rs-crypto-impl",
    "mls-rs-provider-sqlite",
    "mls-rs-codec",
    "mls-rs-uniffi",
]
