[package]
name = "mls-rs-crypto-impl"
version = "0.18.0"
edition = "2021"
description = "CryptoProvider for mls-rs"
keywords = ["mls", "mls-rs"]
license = "MIT"

[features]
x509 = ["mls-rs-identity-x509"]
#fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
post-quantum = ["aws-lc-rs/unstable", "mls-rs-core/post-quantum"]
default = ["x509", "non-fips", "post-quantum"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

aws-lc-rs = { version = "=1.14.1", default-features = false, features = ["alloc"] }
aws-lc-sys = { version = "=0.32", optional = true }
#aws-lc-fips-sys = { version = "=0.13", optional = true }

mls-rs-core = { path = "../mls-rs-core", version = "0.24.0" }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.18.0" }
mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", version = "0.19.0" }

thiserror = "2"
zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }

# Random
getrandom = { version = "0.2", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }

# AEAD
aes-gcm = { version = "0.10", features = ["zeroize"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "getrandom"] }
aead = { version = "0.5", default-features = false, features = ["alloc", "getrandom"] }

# Hash
sha2 = { version = "0.10", default-features = false }

hmac = { version = "0.12", default-features = false, features = ["reset"] }
hkdf = { version = "0.12", default-features = false }

# KEM
p256 = { version = "0.13", default-features = false, features = ["alloc", "ecdh", "ecdsa", "pem"] }
p384 = { version = "0.13", default-features = false, features = ["alloc", "ecdh", "ecdsa", "pem"] }
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "static_secrets"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
sec1 = { version = "0.7", default-features = false, features = ["alloc"] }

# X509 feature
mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", optional = true, version = "0.18.0" }
x509-cert = { version = "0.2", optional = true, features = ["std"] }
spki = { version = "0.7", optional = true, features = ["std", "alloc"] }
maybe-async = "0.2.10"


[dev-dependencies]
hex = { version = "^0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
assert_matches = "1.5.0"
mls-rs-core = { path = "../mls-rs-core", version = "0.24.0", features = ["test_suite"] }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.18.0", features = ["test_utils"] }

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "0.1.74"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
